@@ -5047,11 +5047,11 @@ function WriteConfig($filename)
 		$output.="# Automatically generated by php-weathermap v$WEATHERMAP_VERSION\n\n";
 
 		if ($this->background != '') { $output.="BACKGROUND " . $this->background . "\n"; }
-		else
-		{
+	#	else
+		#{
 			$output.="WIDTH " . $this->width . "\n";
 			$output.="HEIGHT " . $this->height . "\n";
-		}
+		#}
 
 		if ($this->htmlstyle != $this->inherit_fieldlist['htmlstyle'])
 		{ $output.="HTMLSTYLE " . $this->htmlstyle . "\n"; }
