@@ -102,7 +102,7 @@ LINK node00364-node20108
 
 LINK node00352-node00342
 	INFOURL /graph.php?rra_id=all&local_graph_id=39
-	OVERLIBGRAPH /graph_image.php?local_graph_id=39&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
+	OVERLIBGRAPH /cacti/graph_image.php?local_graph_id=39&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
 	TARGET /usr/local/share/cacti/rra/saa_test_traffic_in_48.rrd
 	NODES node00352 node00342
 	VIA 489 86
@@ -121,8 +121,8 @@ LINK test1
 	NODES node20108 node00342:S
 
 LINK test2
-	INFOURL /graph.php?rra_id=all&local_graph_id=8
-	OVERLIBGRAPH /graph_image.php?local_graph_id=8&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
+	INFOURL /cacti/graph.php?rra_id=all&local_graph_id=8
+	OVERLIBGRAPH /cacti/graph_image.php?local_graph_id=8&rra_id=0&graph_nolegend=true&graph_height=100&graph_width=300
 	INBWFORMAT {link:this:bandwidth_in:%k} of {link:this:max_bandwidth_in:%k}
 	OUTBWFORMAT {link:this:bandwidth_out:%k} of {link:this:max_bandwidth_out:%k}
 	BWSTYLE angled
